[package]
name = "movie_review_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
  'cfg(target_os, values("solana"))',
  'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]

[dependencies]
borsh = { version = "1.5.7", features = ["derive"] }
solana-program = "2.3.0"
solana-system-interface = "1.0.0"
solana-program-entrypoint = "2.3.0"
solana-program-error = "2.2.2"
solana-cpi = "2.2.1"
solana-account-info = "2.3.0"
solana-pubkey = "2.4.0"


[dev-dependencies]
litesvm = "0.7.1"
solana-sdk = "2.3.1"
